--- a/meso-forge-tooling/docs/nushell-wrapper.adoc
+++ b/meso-forge-tooling/docs/nushell-wrapper.adoc
@@ -9,37 +9,57 @@ The meso-forge wrapper has been refactored from bash to nushell to provide bette
 
 == Architecture
 
-=== Dual Wrapper System
+=== Individual Trampoline Scripts
 
-The package now includes both wrapper implementations:
+The package now includes individual trampoline scripts for each command:
 
-1. **Primary Nushell Wrapper** (`meso-forge.nu`) - The main implementation
-2. **Bash Shim** (`meso-forge`) - A lightweight wrapper that calls the nushell version
+. **Individual Command Scripts** - Direct nushell trampolines for each meso-forge command
+. **Simplified Architecture** - Each command is a standalone executable script
 
-This approach ensures compatibility while leveraging nushell's superior data handling capabilities.
+This approach provides better modularity and clearer command separation.
 
 === File Structure
 
-```
+[source,text]
+----
 $CONDA_PREFIX/bin/
-├── meso-forge          # Bash shim executable
-└── meso-forge.nu       # Primary nushell wrapper
+├── meso-forge-build-all          # Build all packages
+├── meso-forge-build-noarch       # Build noarch packages
+├── meso-forge-build-platform     # Build platform packages
+├── meso-forge-build-single       # Build single package
+├── meso-forge-publish            # Publish packages
+├── meso-forge-test-packages      # Test packages
+├── meso-forge-check-package      # Check package exists
+├── meso-forge-retract            # Retract packages
+├── meso-forge-lint-recipes       # Lint recipes
+├── meso-forge-pixi-analyze       # Analyze pixi tasks
+└── meso-forge-pixi-update        # Update pixi tasks
 
 $CONDA_PREFIX/share/meso-forge-tooling/
 ├── scripts/
-│   ├── meso-forge.nu   # Source nushell wrapper
-│   ├── *.nu           # Other nushell scripts
+│   ├── *.nu           # Nushell implementation scripts
 │   └── *.py           # Python utilities
 └── pkg-skeletons/     # Package templates
-```
+----
 
 == Implementation Details
 
+=== Trampoline Script Structure
+
+Each trampoline script follows this simple pattern:
+
+[source,nushell]
+----
+#!/usr/bin/env nu
+exec nu $env.CONDA_PREFIX/share/meso-forge-tooling/scripts/[actual_script].nu $args
+----
+
 === Environment Detection
 
-The nushell wrapper uses a robust environment detection system:
+The underlying nushell scripts use a robust environment detection system:
 
-```nushell
+[source,nushell]
+----
 def get_tooling_root [] {
     if ($env.MESO_FORGE_TOOLING_ROOT? | is-not-empty) and ($env.MESO_FORGE_TOOLING_ROOT | path exists) {
         $env.MESO_FORGE_TOOLING_ROOT
@@ -52,60 +72,45 @@ def get_tooling_root [] {
         exit 1
     }
 }
-```
-
-=== Command Dispatching
-
-The wrapper uses nushell's pattern matching for clean command dispatching:
-
-```nushell
-match $command {
-    "build" | "build-pkg" => {
-        # Handle build commands with validation
-    }
-    "publish-pd" => {
-        run_nu_script $scripts_dir "package_publish.nu" ["--mode" "pd" ...$args]
-    }
-    # ... other commands
-}
-```
+----
 
 === Error Handling
 
 Enhanced error handling with colored output:
 
-```nushell
+[source,nushell]
+----
 if not ($recipe_path | path exists) {
     print $"(ansi red)Error: Recipe not found at ($recipe_path)(ansi reset)"
     print "Available packages:"
     list_local_packages
     exit 1
 }
-```
+----
 
 == Benefits of Nushell Implementation
 
-=== 1. **Consistent Tooling Ecosystem**
+=== Consistent Tooling Ecosystem
 - All core functionality uses nushell
 - Better integration between wrapper and scripts
 - Consistent data types and error handling
 
-=== 2. **Enhanced Data Handling**
+=== Enhanced Data Handling
 - Native support for structured data
 - Better list and table processing
 - Type-safe argument handling
 
-=== 3. **Improved Error Messages**
+=== Improved Error Messages
 - Colored output using `ansi` commands
 - Structured error information
 - Better debugging capabilities
 
-=== 4. **Code Maintainability**
+=== Code Maintainability
 - More readable pattern matching
 - Functional programming paradigms
 - Better separation of concerns
 
-=== 5. **Cross-Platform Consistency**
+=== Cross-Platform Consistency
 - Uniform behavior across platforms
 - Native path handling
 - Environment variable management
@@ -114,9 +119,10 @@ if not ($recipe_path | path exists) {
 
 === Smart Script Detection
 
-The wrapper automatically detects and executes scripts:
+The underlying scripts automatically detect and execute appropriate implementations:
 
-```nushell
+[source,nushell]
+----
 # Try .nu extension first, then .py
 let nu_script = $scripts_dir | path join $"($script_name).nu"
 let py_script = $scripts_dir | path join $"($script_name).py"
@@ -126,13 +132,14 @@ if ($nu_script | path exists) {
 } else if ($py_script | path exists) {
     run_py_script $scripts_dir $"($script_name).py" $script_args
 }
-```
+----
 
 === Enhanced Listing Functions
 
 Improved package and script discovery:
 
-```nushell
+[source,nushell]
+----
 def list_nu_scripts [scripts_dir: string] {
     if ($scripts_dir | path exists) {
         let scripts = ls $scripts_dir
@@ -147,13 +154,14 @@ def list_nu_scripts [scripts_dir: string] {
         }
     }
 }
-```
+----
 
 === Robust Package Initialization
 
 Type-safe package creation with validation:
 
-```nushell
+[source,nushell]
+----
 let skeleton_type = $args.0
 let package_name = $args.1
 let source_dir = $skeletons_dir | path join $skeleton_type
@@ -164,76 +172,96 @@ if not ($source_dir | path exists) {
     list_skeletons $skeletons_dir
     exit 1
 }
-```
+----
 
 == Usage Examples
 
 === Basic Commands
 
-```bash
-# All these work identically to the bash version
-meso-forge help
-meso-forge config
-meso-forge list-scripts
-meso-forge build my-package
-```
+[source,bash]
+----
+# Build commands
+meso-forge-build-all
+meso-forge-build-noarch
+meso-forge-build-platform
+meso-forge-build-single --recipe pkgs/my-package/recipe.yaml
+
+# Publishing
+meso-forge-publish --mode s3 --channel my-channel
+
+# Testing
+meso-forge-test-packages
+
+# Quality assurance
+meso-forge-lint-recipes
+----
 
 === Direct Nushell Execution
 
-```bash
-# Call the nushell wrapper directly
-nu meso-forge.nu help
-nu meso-forge.nu build my-package
+[source,bash]
+----
+# Call individual trampoline scripts
+meso-forge-build-all
+meso-forge-build-single --recipe pkgs/my-package/recipe.yaml
 
-# From within nushell
-use meso-forge.nu *
-main "build" "my-package"
-```
+# From within nushell (direct script calls)
+nu $env.CONDA_PREFIX/share/meso-forge-tooling/scripts/build_all.nu
+nu $env.CONDA_PREFIX/share/meso-forge-tooling/scripts/build_single.nu --recipe pkgs/my-package/recipe.yaml
+----
 
-=== Advanced Usage
+=== Pixi Integration
 
-```bash
-# Use nushell features directly
-meso-forge list-packages | where $it =~ "python"
-meso-forge config | grep "Tooling root"
-```
+[source,bash]
+----
+# Using pixi tasks (recommended)
+pixi run build-all
+pixi run build-pkg my-package
+pixi run test-packages
+pixi run publish-local
+
+# Pixi task management
+meso-forge-pixi-analyze
+meso-forge-pixi-update
+----
 
 == Migration Guide
 
 === For End Users
 
-No changes required - the bash shim maintains full compatibility:
+The new trampoline scripts provide a clean command interface:
 
-```bash
-# These continue to work exactly as before
-meso-forge build my-package
-meso-forge publish-pd
-meso-forge test
-```
+[source,bash]
+----
+# New individual command structure
+meso-forge-build-single --recipe pkgs/my-package/recipe.yaml
+meso-forge-publish --mode pd
+meso-forge-test-packages
+----
 
 === For Developers
 
 When developing or debugging, you can now:
 
-1. **Use the nushell wrapper directly** for better error messages
-2. **Leverage nushell's data processing** for complex operations
-3. **Access structured output** from wrapper functions
+. **Use individual command scripts** for better isolation
+. **Leverage nushell's data processing** for complex operations
+. **Access structured output** from script functions
 
 === For CI/CD Systems
 
-The wrapper maintains the same interface:
+The commands maintain a clear interface:
 
-```yaml
+[source,yaml]
+----
 # GitHub Actions example
 - name: Build packages
-  run: meso-forge build-all
+  run: meso-forge-build-all
 
 - name: Test packages
-  run: meso-forge test
+  run: meso-forge-test-packages
 
 - name: Publish packages
-  run: meso-forge publish-pd
-```
+  run: meso-forge-publish --mode pd
+----
 
 == Troubleshooting
 
@@ -244,50 +272,53 @@ The wrapper maintains the same interface:
 *Cause:* Nushell is not installed or not in PATH.
 
 *Solution:*
-```bash
+[source,bash]
+----
 # Install via conda/pixi
 pixi add nushell
 
 # Or verify installation
 which nu
 nu --version
-```
+----
 
-==== "meso-forge.nu not found"
+==== "meso-forge-* commands not found"
 
 *Cause:* Package installation issue or incorrect environment.
 
 *Solution:*
-```bash
+[source,bash]
+----
 # Check installation
 pixi list | grep meso-forge-tooling
 
 # Verify file locations
 ls $CONDA_PREFIX/bin/meso-forge*
-```
+----
 
 ==== Permission Denied
 
 *Cause:* Wrapper scripts don't have execute permissions.
 
 *Solution:*
-```bash
+[source,bash]
+----
 # Fix permissions
-chmod +x $CONDA_PREFIX/bin/meso-forge
-chmod +x $CONDA_PREFIX/bin/meso-forge.nu
-```
+chmod +x $CONDA_PREFIX/bin/meso-forge-*
+----
 
 === Debug Mode
 
 Enable detailed debugging:
 
-```bash
-# Debug the bash shim
-bash -x $(which meso-forge) build my-package
+[source,bash]
+----
+# Debug the nushell scripts directly
+nu --log-level debug $CONDA_PREFIX/share/meso-forge-tooling/scripts/build_single.nu --recipe pkgs/my-package/recipe.yaml
 
-# Debug the nushell wrapper
-nu --log-level debug meso-forge.nu build my-package
-```
+# Enable verbose output
+meso-forge-build-all --verbose
+----
 
 === Performance Considerations
 
@@ -301,39 +332,36 @@ However, for single-command usage, the overhead is minimal.
 
 == Development
 
-=== Adding New Commands
+=== Adding New Trampoline Scripts
 
-To add commands to the nushell wrapper:
+To add new trampoline scripts:
 
-1. **Add match case** in the main function
-2. **Implement validation** if needed
-3. **Call appropriate helper** function
-4. **Update help text**
+. **Create the underlying nushell implementation** in `scripts/`
+. **Add trampoline script creation** in `recipe.yaml` build section
+. **Update tests** to include the new command
+. **Update documentation**
 
-Example:
-```nushell
-"my-command" => {
-    if ($args | length) == 0 {
-        print $"(ansi red)Error: Argument required(ansi reset)"
-        exit 1
-    }
-    run_nu_script $scripts_dir "my_script.nu" $args
-}
-```
+Example trampoline script:
+[source,nushell]
+----
+#!/usr/bin/env nu
+exec nu $env.CONDA_PREFIX/share/meso-forge-tooling/scripts/my_new_script.nu $args
+----
 
 === Testing Changes
 
-```bash
+[source,bash]
+----
 # Test basic functionality
-nu meso-forge.nu help
-nu meso-forge.nu config
+meso-forge-build-all --help
+meso-forge-lint-recipes --help
 
 # Test command execution
-nu meso-forge.nu run test_plugins
+meso-forge-test-packages
 
 # Test error handling
-nu meso-forge.nu build nonexistent-package
-```
+meso-forge-build-single --recipe pkgs/nonexistent-package/recipe.yaml
+----
 
 === Code Style
 
@@ -345,34 +373,57 @@ Follow nushell conventions:
 - Include proper error handling with `ansi` colors
 - Document function parameters and return types
 
+== Available Commands
+
+=== Build Commands
+* `meso-forge-build-all` - Build all packages in the repository
+* `meso-forge-build-noarch` - Build only noarch packages
+* `meso-forge-build-platform` - Build platform-specific packages
+* `meso-forge-build-single` - Build a single package by recipe path
+
+=== Publishing Commands
+* `meso-forge-publish` - Publish packages to configured channels
+
+=== Testing Commands
+* `meso-forge-test-packages` - Run package tests
+
+=== Quality Assurance Commands
+* `meso-forge-check-package` - Check if package exists in channels
+* `meso-forge-retract` - Retract packages from channels
+* `meso-forge-lint-recipes` - Lint recipe files for compliance
+
+=== Pixi Integration Commands
+* `meso-forge-pixi-analyze` - Analyze pixi.toml for meso-forge tasks
+* `meso-forge-pixi-update` - Update pixi.toml with latest task definitions
+
 == Future Enhancements
 
 === Planned Improvements
 
-1. **Native nushell plugin system** integration
-2. **Enhanced structured output** for all commands
-3. **Interactive command selection** menus
-4. **Built-in progress indicators** for long operations
-5. **Configuration file support** (TOML/JSON)
+. **Enhanced command completion** for all trampoline scripts
+. **Structured output options** (JSON, YAML, table formats)
+. **Interactive command selection** menus
+. **Built-in progress indicators** for long operations
+. **Configuration file support** (TOML/JSON)
 
 === Extension Points
 
-The nushell wrapper provides several extension mechanisms:
+The trampoline system provides several extension mechanisms:
 
-- **Custom command plugins** via additional .nu files
-- **Data transformation pipelines** for complex workflows
-- **Interactive utilities** using nushell's input system
+- **Additional trampoline scripts** for custom workflows
+- **Data transformation pipelines** for complex operations
 - **Integration hooks** for external tools
+- **Custom validation** and error handling
 
 == See Also
 
-- link:meso-forge-wrapper.adoc[Complete Wrapper Documentation]
-- link:nushell-script-usage.adoc[Nushell Scripts Usage]
-- https://www.nushell.sh/[Official Nushell Documentation]
 - link:../README.adoc[Main Project Documentation]
+- link:pixi-task-management.adoc[Pixi Task Management]
+- https://www.nushell.sh/[Official Nushell Documentation]
+- https://pixi.sh/[Pixi Documentation]
 
 ---
 
-*Last updated: July 2025*
-*Wrapper version: 0.1.9*
+*Last updated: December 2024* +
+*Wrapper version: 0.2.2* +
 *Nushell version: 0.105.1+*
